# contracts

./: .env  .env.example  Cargo.toml  Forc.toml  README.md
contract/src/: errors.sw  events.sw  main.sw
scripts/: main.rs
src/: errors.sw  lib.rs  main.sw
tests/: harness.rs
tests/functions/: mod.rs  new_asset.rs  transfer_ownership.rs  transfer_ownership_and_fee.rs
tests/setup/: mod.rs
